--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,8 +6,10 @@
         xmlns:local="clr-namespace:Lab_2"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="84,44,0,0" VerticalAlignment="Top" Width="650" Height="333"/>
-
+    <Grid x:Name="App" Loaded="App_Loaded">
+        <TreeView x:Name="tvObjects" HorizontalAlignment="Left" Height="400" Margin="10,10,0,0" VerticalAlignment="Top" Width="228" BorderBrush="#FFF44600" Background="{x:Null}"/>
+        <Button x:Name="btnAdd" Content="Add Object" HorizontalAlignment="Left" Margin="265,25,0,0" VerticalAlignment="Top" Width="90" Height="33"/>
+        <Button x:Name="btnDel" Content="Delete Object" HorizontalAlignment="Left" Margin="265,80,0,0" VerticalAlignment="Top" Width="90" Height="33"/>
+        <Button Content="Modify Object" HorizontalAlignment="Left" Margin="265,133,0,0" VerticalAlignment="Top" Width="90" Height="33" RenderTransformOrigin="0.578,-0.31"/>
     </Grid>
 </Window>
