--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,15 +6,33 @@
         xmlns:local="clr-namespace:Lab_2"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="800">
-    <Grid x:Name="App" Loaded="App_Loaded" Margin="0,0,-6.4,-30">
-        <Button x:Name="btnAdd" Content="Add Object" HorizontalAlignment="Left" Margin="265,25,0,0" VerticalAlignment="Top" Width="90" Height="33" Click="BtnAdd_Click"/>
-        <Button x:Name="btnDel" Content="Delete Object" HorizontalAlignment="Left" Margin="265,80,0,0" VerticalAlignment="Top" Width="90" Height="33" Click="BtnDel_Click"/>
-        <Button x:Name="btnSetForModifying" Content="Set object for modifying" HorizontalAlignment="Left" Margin="265,133,0,0" VerticalAlignment="Top" Width="90" Height="33" RenderTransformOrigin="0.578,-0.31" Click="Button_Click"/>
-        <StackPanel x:Name="pnlBlocks" Margin="10,10,0,9.8" Width="221" HorizontalAlignment="Left"/>
-        <ComboBox x:Name="cmbClasses" HorizontalAlignment="Left" Margin="437,25,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="CmbClasses_SelectionChanged"/>
-        <Button x:Name="btnShow" Content="Show All Workers" HorizontalAlignment="Left" Margin="265,195,0,0" VerticalAlignment="Top" Width="90" Height="33" RenderTransformOrigin="0.491,0.567" Click="BtnShow_Click"/>
-        <TextBox x:Name="tbShowing" AcceptsReturn="True" HorizontalAlignment="Left" Height="275" Margin="265,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Visible" Width="493"/>
-        <TextBox x:Name="tbDeleting" HorizontalAlignment="Left" Height="23" Margin="437,93,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" UndoLimit="116"/>
-        <Button x:Name="btnModify" Content="Modify" HorizontalAlignment="Left" Margin="422,195,0,0" VerticalAlignment="Top" Width="90" Height="33" Click="BtnModify_Click"/>
+    <Grid x:Name="App" Loaded="App_Loaded" Margin="0,0,-6.4,-30" >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="17*"/>
+            <ColumnDefinition Width="383*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="Black" Offset="0"/>
+                <GradientStop Color="White" Offset="1"/>
+                <GradientStop Color="#FF181818" Offset="0.098"/>
+                <GradientStop Color="#FF931313" Offset="0.643"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Button x:Name="btnAdd" Content="Add Object" HorizontalAlignment="Left" Margin="263.4,83,0,0" VerticalAlignment="Top" Width="134" Height="33" Click="BtnAdd_Click" Style="{StaticResource ButtonStyle}" Grid.Column="1"/>
+        <Button x:Name="btnDel" Content="Delete Object" HorizontalAlignment="Left" Margin="454.4,124,0,0" VerticalAlignment="Top" Width="134" Height="33" Click="BtnDel_Click" Style="{StaticResource ButtonStyle}" RenderTransformOrigin="0.156,1.279" Grid.Column="1"/>
+        <Button x:Name="btnSetForModifying" Content="Find Object" HorizontalAlignment="Left" Margin="603.4,124,0,0" VerticalAlignment="Top" Width="134" Height="33" RenderTransformOrigin="0.578,-0.31" Click="Button_Click" Style="{StaticResource ButtonStyle}" Grid.Column="1" />
+        <StackPanel x:Name="pnlBlocks" Margin="10,10,0,10.4" Width="257" HorizontalAlignment="Left" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnShow" Content="Show All Objects" HorizontalAlignment="Left" Margin="587.4,243,0,0" VerticalAlignment="Top" Width="150" Height="33" RenderTransformOrigin="0.491,0.567" Click="BtnShow_Click" Style="{StaticResource ButtonStyle}" Grid.Column="1"/>
+        <TextBox x:Name="tbShowing" AcceptsReturn="True" HorizontalAlignment="Left" Height="275" Margin="244.4,281,0,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Visible" Width="493" Grid.Column="1" BorderBrush="{DynamicResource {x:Static SystemColors.DesktopBrushKey}}" CaretBrush="#FF942B2B"/>
+        <TextBox x:Name="tbDeleting" HorizontalAlignment="Left" Height="23" Margin="454.4,83,0,0" TextWrapping="Wrap" Text="Number of object" VerticalAlignment="Top" Width="283" UndoLimit="116" Grid.Column="1"/>
+        <Button x:Name="btnModify" Content="Modify Object" HorizontalAlignment="Left" Margin="603.4,174,0,0" VerticalAlignment="Top" Width="134" Height="33" Click="BtnModify_Click" Style="{StaticResource ButtonStyle}" Grid.Column="1" RenderTransformOrigin="0.749,0.764"/>
+        <ComboBox x:Name="cmbClasses" HorizontalAlignment="Left" Margin="263.4,45,0,0" VerticalAlignment="Top" Width="172" SelectionChanged="CmbClasses_SelectionChanged_1" Grid.Column="1" Height="22"/>
+        <Button x:Name="btnClear" Content="Clear Window" Grid.Column="1" HorizontalAlignment="Left" Margin="263.4,243,0,0" VerticalAlignment="Top" Width="134" Height="31" Style="{StaticResource ButtonStyle}" Click="Button_Click_1" Background="#FFDDDDDD" BorderBrush="{x:Null}" Foreground="#FF111010"/>
+        <ComboBox x:Name="cmbDeletingType" Grid.Column="1" HorizontalAlignment="Left" Margin="454.4,45,0,0" VerticalAlignment="Top" Width="283" SelectedIndex="0">
+            <ListBoxItem Content="By index"/>
+            <ListBoxItem Content="By pass number"/>
+        </ComboBox>
     </Grid>
+
 </Window>
