--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,34 +5,53 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lab_2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800">
-    <Grid x:Name="App" Loaded="App_Loaded" Margin="0,0,-6.4,-30" >
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="17*"/>
-            <ColumnDefinition Width="383*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="Black" Offset="0"/>
-                <GradientStop Color="White" Offset="1"/>
-                <GradientStop Color="#FF181818" Offset="0.098"/>
-                <GradientStop Color="#FF931313" Offset="0.643"/>
-            </LinearGradientBrush>
-        </Grid.Background>
-        <Button x:Name="btnAdd" Content="Add Object" HorizontalAlignment="Left" Margin="263.4,83,0,0" VerticalAlignment="Top" Width="134" Height="33" Click="BtnAdd_Click" Style="{StaticResource ButtonStyle}" Grid.Column="1"/>
-        <Button x:Name="btnDel" Content="Delete Object" HorizontalAlignment="Left" Margin="454.4,124,0,0" VerticalAlignment="Top" Width="134" Height="33" Click="BtnDel_Click" Style="{StaticResource ButtonStyle}" RenderTransformOrigin="0.156,1.279" Grid.Column="1"/>
-        <Button x:Name="btnSetForModifying" Content="Find Object" HorizontalAlignment="Left" Margin="603.4,124,0,0" VerticalAlignment="Top" Width="134" Height="33" RenderTransformOrigin="0.578,-0.31" Click="Button_Click" Style="{StaticResource ButtonStyle}" Grid.Column="1" />
-        <StackPanel x:Name="pnlBlocks" Margin="10,10,0,10.4" Width="257" HorizontalAlignment="Left" Grid.ColumnSpan="2"/>
-        <Button x:Name="btnShow" Content="Show All Objects" HorizontalAlignment="Left" Margin="587.4,243,0,0" VerticalAlignment="Top" Width="150" Height="33" RenderTransformOrigin="0.491,0.567" Click="BtnShow_Click" Style="{StaticResource ButtonStyle}" Grid.Column="1"/>
-        <TextBox x:Name="tbShowing" AcceptsReturn="True" HorizontalAlignment="Left" Height="275" Margin="244.4,281,0,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Visible" Width="493" Grid.Column="1" BorderBrush="{DynamicResource {x:Static SystemColors.DesktopBrushKey}}" CaretBrush="#FF942B2B"/>
-        <TextBox x:Name="tbDeleting" HorizontalAlignment="Left" Height="23" Margin="454.4,83,0,0" TextWrapping="Wrap" Text="Number of object" VerticalAlignment="Top" Width="283" UndoLimit="116" Grid.Column="1"/>
-        <Button x:Name="btnModify" Content="Modify Object" HorizontalAlignment="Left" Margin="603.4,174,0,0" VerticalAlignment="Top" Width="134" Height="33" Click="BtnModify_Click" Style="{StaticResource ButtonStyle}" Grid.Column="1" RenderTransformOrigin="0.749,0.764"/>
-        <ComboBox x:Name="cmbClasses" HorizontalAlignment="Left" Margin="263.4,45,0,0" VerticalAlignment="Top" Width="172" SelectionChanged="CmbClasses_SelectionChanged_1" Grid.Column="1" Height="22"/>
-        <Button x:Name="btnClear" Content="Clear Window" Grid.Column="1" HorizontalAlignment="Left" Margin="263.4,243,0,0" VerticalAlignment="Top" Width="134" Height="31" Style="{StaticResource ButtonStyle}" Click="Button_Click_1" Background="#FFDDDDDD" BorderBrush="{x:Null}" Foreground="#FF111010"/>
-        <ComboBox x:Name="cmbDeletingType" Grid.Column="1" HorizontalAlignment="Left" Margin="454.4,45,0,0" VerticalAlignment="Top" Width="283" SelectedIndex="0">
-            <ListBoxItem Content="By index"/>
-            <ListBoxItem Content="By pass number"/>
-        </ComboBox>
-    </Grid>
+        Title="MainWindow" Height="600" Width="1258.1" >
+    <ScrollViewer HorizontalAlignment="Stretch">
+        <Grid x:Name="App" Loaded="App_Loaded" Width="1249">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0*"/>
+                <ColumnDefinition Width="26*"/>
+                <ColumnDefinition Width="139*"/>
+                <ColumnDefinition Width="459*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="White" Offset="1"/>
+                    <GradientStop Color="#FF181818" Offset="0.098"/>
+                    <GradientStop Color="#FF931313" Offset="0.643"/>
+                </LinearGradientBrush>
+            </Grid.Background>
+            <Button x:Name="btnAdd" Content="Add Object" HorizontalAlignment="Left" Margin="76.6,83,0,0" VerticalAlignment="Top" Width="134" Height="33" Click="BtnAdd_Click" Style="{StaticResource ButtonStyle}" Grid.Column="3"/>
+            <Button x:Name="btnDel" Content="Delete Object" HorizontalAlignment="Left" Margin="267.6,124,0,0" VerticalAlignment="Top" Width="134" Height="33" Click="BtnDel_Click" Style="{StaticResource ButtonStyle}" RenderTransformOrigin="0.156,1.279" Grid.Column="3"/>
+            <Button x:Name="btnSetForModifying" Content="Find Object" HorizontalAlignment="Left" Margin="416.6,124,0,0" VerticalAlignment="Top" Width="134" Height="33" RenderTransformOrigin="0.578,-0.31" Click="Button_Click" Style="{StaticResource ButtonStyle}" Grid.Column="3" />
+
+            <StackPanel x:Name="pnlBlocks" Margin="2,10,0,10.4" Width="257" HorizontalAlignment="Left" Grid.Column="1" Grid.ColumnSpan="2"/>
+            <Button x:Name="btnShow" Content="Show All Objects" HorizontalAlignment="Left" Margin="400.6,243,0,0" VerticalAlignment="Top" Width="150" Height="33" RenderTransformOrigin="0.491,0.567" Click="BtnShow_Click" Style="{StaticResource ButtonStyle}" Grid.Column="3"/>
+            <TextBox x:Name="tbShowing" AcceptsReturn="True" HorizontalAlignment="Left" Height="275" Margin="57.6,281,0,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Visible" Width="493" Grid.Column="3" BorderBrush="{DynamicResource {x:Static SystemColors.DesktopBrushKey}}" CaretBrush="#FF942B2B"/>
+            <TextBox x:Name="tbDeleting" HorizontalAlignment="Left" Height="23" Margin="267.6,83,0,0" TextWrapping="Wrap" Text="Number of object" VerticalAlignment="Top" Width="283" UndoLimit="116" Grid.Column="3"/>
+            <Button x:Name="btnModify" Content="Modify Object" HorizontalAlignment="Left" Margin="416.6,174,0,0" VerticalAlignment="Top" Width="134" Height="33" Click="BtnModify_Click" Style="{StaticResource ButtonStyle}" Grid.Column="3" RenderTransformOrigin="0.749,0.764"/>
+            <ComboBox x:Name="cmbClasses" HorizontalAlignment="Left" Margin="76.6,45,0,0" VerticalAlignment="Top" Width="172" SelectionChanged="CmbClasses_SelectionChanged_1" Grid.Column="3" Height="22"/>
+            <Button x:Name="btnClear" Content="Clear Window" Grid.Column="3" HorizontalAlignment="Left" Margin="76.6,243,0,0" VerticalAlignment="Top" Width="134" Height="31" Style="{StaticResource ButtonStyle}" Click="Button_Click_1" Background="#FFDDDDDD" BorderBrush="{x:Null}" Foreground="#FF111010"/>
+            <ComboBox x:Name="cmbDeletingType" Grid.Column="3" HorizontalAlignment="Left" Margin="267.6,45,0,0" VerticalAlignment="Top" Width="283" SelectedIndex="0" Height="22" SelectionChanged="CmbDeletingType_SelectionChanged">
+                <ListBoxItem Content="By index"/>
+                <ListBoxItem Content="By pass number"/>
+            </ComboBox>
+            <StackPanel Grid.Column="3" HorizontalAlignment="Left" Height="533" Margin="555.6,23,0,0" VerticalAlignment="Top" Width="300"/>
+            <ComboBox x:Name="cmbSerializationType" Grid.Column="3" HorizontalAlignment="Left" Margin="579.6,45,0,0" VerticalAlignment="Top" Width="296" SelectionChanged="CmbSerializationType_SelectionChanged" IsReadOnly="True" IsEnabled="False">
+                <ListBoxItem Content="bin"/>
+                <ListBoxItem Content="json" Cursor=""/>
+                <ListBoxItem Content="txt"/>
+            </ComboBox>
+            <Button x:Name="btnSerialize" Content="Serialize objects" Grid.Column="3" HorizontalAlignment="Left" Height="33" Margin="714.6,178,0,0" VerticalAlignment="Top" Width="167" RenderTransformOrigin="0.042,0.815" Style="{StaticResource ButtonStyle}" Click="BtnSerialize_Click"/>
+            <TextBox x:Name="tbSelectedItems" Grid.Column="3" HorizontalAlignment="Left" Height="23" Margin="587.6,174,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="239" Visibility="Hidden"/>
+            <Button x:Name="btnDeserialize" Content="Deserialize objects" Grid.Column="3" HorizontalAlignment="Left" Margin="714.6,292,0,0" VerticalAlignment="Top" Width="167" Height="31" Style="{StaticResource ButtonStyle}" Click="BtnDeserialize_Click"/>
+            <Button x:Name="btnOpenFile" Content="Open File&#xD;&#xA; for&#xD;&#xA;deserialization ..." Grid.Column="3" HorizontalAlignment="Left" Margin="571.6,240,0,0" VerticalAlignment="Top" Width="138" Style="{StaticResource ButtonStyle}" Click="BtnOpenFile_Click" Height="83"/>
+            <Button x:Name="btnSaveFile" Content="Save &#xD;&#xA;serializaton&#xD;&#xA; in File ..." Grid.Column="3" HorizontalAlignment="Left" Margin="571.6,134,0,0" VerticalAlignment="Top" Width="138" Style="{StaticResource ButtonStyle}" RenderTransformOrigin="0.837,-0.168" Height="77" Click="BtnSaveFile_Click"/>
+            <TextBox x:Name="tbSaveFileName" Grid.Column="3" HorizontalAlignment="Left" Height="31" Margin="714.6,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="161" IsReadOnly="True" Text="Path for chosen file in dialog"/>
+            <TextBox x:Name="tbOpenFileName" Grid.Column="3" HorizontalAlignment="Left" Height="33" Margin="714.6,243,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="161" IsReadOnly="True" Text="Path for chosen file in dialog"/>
+
+        </Grid>
+    </ScrollViewer>
 
 </Window>
